# FeaturePerfCSCollection

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
cmake/: case_study_macros.cmake
include/fpcsc/perf_util/: sleep.h  (+1 more)
projects/: CMakeLists.txt
projects/FeatureDependentHotCode/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
projects/LongerCallee/: CMakeLists.txt  LCallee.cpp
projects/LongerCaller/: CMakeLists.txt  LCaller.cpp
projects/PerformanceInteracrtionDetection/: CMakeLists.txt
projects/PerformanceInteractionDetection/: CMakeLists.txt
projects/PrimeNumbers/: CMakeLists.txt  main.cpp
projects/RecursiveCalls/: CMakeLists.txt  RC.cpp
projects/SimpleCall/: CMakeLists.txt  SC.cpp
projects/SynthCTCRPT/: CMakeLists.txt  main.cpp
projects/SynthCTCRTP/: CMakeLists.txt  CRTP.h  Storage.h  Transformer.h  main.cpp
projects/SynthCTPolicies/: CMakeLists.txt  Logging.h  Storage.h  Transformer.h  main.cpp
projects/SynthCTSpecialization/: Algorithm.h  CMakeLists.txt  Specializations.h  Storage.h  main.cpp
projects/SynthCTTraitBased/: Algorithms.h  CMakeLists.txt  Storage.h  TraitDefinitions.h  main.cpp
projects/SynthDADynContextSensitivity/: CMakeLists.txt  main.cpp
projects/SynthDADynamicDispatch/: CMakeLists.txt  main.cpp
projects/SynthDARecursion/: CMakeLists.txt  main.cpp
projects/SynthDAVirtualInheritance/: main.cpp
projects/SynthFeatureHigerOrderInteraction/: CMakeLists.txt
projects/SynthFeatureHigherOrderInteraction/: main.cpp
projects/SynthFeatureInteraction/: CMakeLists.txt  main.cpp
projects/SynthFeatureLargeConfigSpace/: CMakeLists.txt  main.cpp
projects/SynthFeatureRestrictedConfigSpace/: CMakeLists.txt  main.cpp
projects/SynthIPCombined/: CMakeLists.txt  main.cpp
projects/SynthIPRuntime/: CMakeLists.txt  main.cpp
projects/SynthIPTemplate/: CMakeLists.txt  main.cpp
projects/SynthIPTemplate2/: CMakeLists.txt  main.cpp
projects/SynthMemoryUsage/: CMakeLists.txt  main.cpp
projects/SynthOVInsideLoop/: CMakeLists.txt  main.cpp
projects/SynthSAContextSensitivity/: CMakeLists.txt  main.cpp
projects/SynthSAFieldSensitivity/: CMakeLists.txt  main.cpp
projects/SynthSAFlowSensitivity/: CMakeLists.txt  main.cpp
src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.save  cmake_install.cmake
src/BusyLoop/: BLmain.cpp  CMakeLists.txt
src/CollinearFeature/: CMakeLists.txt  CollinearFeature.cpp
src/CompileTimeFeatures/: CMakeLists.txt  TraitBased.cpp
src/ConfigVarInStruct/: CMakeLists.txt  CVIS_global_main.c  CVIS_local_main.c  CVIS_pointer_main.c
src/FeatureCallingFeature/: CMakeLists.txt  FeatureCallingFeature.cpp  cmake_install.cmake
src/FeatureVirtualInheritance/: CMakeLists.txt  FVImain.cpp  cmake_install.cmake
src/GTBasic/: CMakeLists.txt  cmake_install.cmake
src/GTElse/: CMakeLists.txt  GTElse.cpp  cmake_install.cmake
src/GTFunction/: CMakeLists.txt  GTFunction.cpp  cmake_install.cmake
src/GTMulticollinearity/: CMakeLists.txt  GTMulticollinearity.cpp  cmake_install.cmake
src/GTNumeric/: CMakeLists.txt  GTNumeric.cpp
src/GTSharedFeature/: CMakeLists.txt  GTSharedFeature.cpp  cmake_install.cmake
src/MultiRegionsInLoop/: CMakeLists.txt  MRILmain.cpp
src/MultiSharedMultipleRegions/: CMakeLists.txt  FeatureHeader.cpp  FeatureHeader.h  MSMRmain.cpp  cmake_install.cmake
src/MultipleSimpleInstructions/: CMakeLists.txt  MSImain.cpp
src/PerfDetectiveExample/: CMakeLists.txt  PDEmain.cpp  cmake_install.cmake
src/SimpleBusyLoop/: CMakeLists.txt  SBLmain.cpp  cmake_install.cmake
src/SimpleFeatureInteraction/: CMakeLists.txt  SFImain.cpp  cmake_install.cmake
src/SimpleLoopedFeature/: CMakeLists.txt  SLFmain.cpp
src/SimpleSleepLoop/: CMakeLists.txt  SSLmain.cpp  cmake_install.cmake
src/SingleLocalMultipleRegions/: CMakeLists.txt  SLMRmain.cpp  cmake_install.cmake
src/SingleLocalSimple/: CMakeLists.txt  SLSmain.cpp  cmake_install.cmake
src/SingleRecursiveFeature/: CMakeLists.txt  SRFmain.cpp
src/SleepLoop/: CMakeLists.txt  SLmain.cpp
(+35 files in other folders)
