add_subdirectory(SingleLocalSimple)
add_subdirectory(SingleLocalMultipleRegions)
add_subdirectory(MultiSharedMultipleRegions)
add_subdirectory(SimpleFeatureInteraction)
add_subdirectory(SimpleBusyLoop)
add_subdirectory(PerfDetectiveExample)
add_subdirectory(FeatureVirtualInheritance)
add_subdirectory(SimpleCall)
add_subdirectory(LongerCallee)
add_subdirectory(LongerCaller)
add_subdirectory(RecursiveCalls)